--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -1,7 +1,8 @@
 .container {
     margin: 0 auto;
-    max-width: 500px;
-    letter-spacing: 0.02em;
+    max-width: 600px;
+    letter-spacing: 0.035em;
+    line-height: 1.3;
     color: #333;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1em;
@@ -11,7 +12,7 @@
 .heading {
     letter-spacing: -0.05em;
     color: #984;
-    font-size: 3em;
+    font-size: 2em;
     font-weight: 900;
 }
 
@@ -27,4 +28,11 @@
 
 .nav-link-text {
     color: #333;
+}
+
+.site-title {
+    font-size: 3rem;
+    color: gray;
+    font-weight: 700;
+    margin: 3rem 0;
 }
